GA fix, nav collapse fix, added button to index.html

--- a/assets/style.css
+++ b/assets/style.css
@@ -290,8 +290,13 @@ i.fa:focus {
 
  .resumepage h2.title { 	
     margin-top:120px; 
-    margin-bottom:50px;  
+    margin-bottom:0px;  
 } 
+
+ .resumepage .button-wrapper {
+    text-align:center;
+    margin-top:20px;
+}
 
 #resume h3 {
     margin-top:50px;
